Page elements aligned correctly.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,6 @@ h3 {
 
 .card {
     width: 12rem;
-    margin: 2px;
+    margin: 9px;
     background-color: aqua !important;
 }
